style: updates the article preview styles
- also makes the visible grids have no pointer events

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -76,6 +76,11 @@ import VisibleGrid from "./VisibleGrid.astro";
     padding: 0 1rem;
   }
 
+  .top-right-grid,
+  .top-left-grid,
+  .mobile-top-left-grid {
+    pointer-events: none;
+  }
   .top-right-grid {
     position: absolute;
     top: -275px;
