--- a/src/components/VisibleGrid.astro
+++ b/src/components/VisibleGrid.astro
@@ -56,6 +56,7 @@ const gridBorder = `1px solid hsl(0 0% 80% / ${opacity})`;
     grid-template-columns: repeat(var(--columns), 1fr);
     grid-template-rows: repeat(var(--rows), 1fr);
     mask-image: var(--maskGradient);
+    pointer-events: none;
   }
 
   .visible-grid:before {
@@ -65,6 +66,7 @@ const gridBorder = `1px solid hsl(0 0% 80% / ${opacity})`;
     left: 0;
     width: 100%;
     height: 100%;
+    pointer-events: none;
   }
 
   .grid-cell {
