--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,7 @@ import FullScreenLayout from "../layouts/FullScreenLayout.astro";
     position: relative;
     grid-column: 2 / 5;
     grid-row: 2 / 5;
+    pointer-events: none;
   }
 
   .intro-img {
