adds a new blog index page to display all articles and snippets
- standardizes publishedAt date
- more css updates

--- a/src/components/unsocial/ArticlePreview.astro
+++ b/src/components/unsocial/ArticlePreview.astro
@@ -31,6 +31,7 @@ const date = dayjs(publishedAt).format("MMM D, YYYY");
         </ul>
       )
     }
+    <p class="article-description">{description}</p>
     <a class="read-btn" href={`/unsocial/${slug}`}>Read</a>
   </div>
 </article>
