--- a/src/styles/blogLayout.css
+++ b/src/styles/blogLayout.css
@@ -7,6 +7,7 @@
 .blog-layout {
     margin-block: 5rem;
     row-gap: 1.5rem;
+    container: articlePreview / inline-size;
 
     pre {
         padding: 2rem;
