--- a/src/components/unsocial/unsocial.css
+++ b/src/components/unsocial/unsocial.css
@@ -48,7 +48,6 @@
         padding: 1rem;
         border-bottom-left-radius: var(--radius);
         border-bottom-right-radius: var(--radius);
-
     }
 
 }
@@ -56,7 +55,7 @@
 /* ARTICLE PREVIEW*/
 .article-preview {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 3fr;
 
     .image-wrapper {
         width: 100%;
@@ -96,6 +95,10 @@
             }
         }
 
+        .article-description {
+            display: none;
+        }
+
 
     }
 
@@ -107,6 +110,26 @@
         width: fit-content;
         font-size: 1rem;
         box-shadow: var(--box-shadow);
+    }
+
+}
+
+@container articlePreview (max-width: 680px) {
+    .article-preview {
+        grid-template-columns: 1fr;
+
+        .article-summary {
+            padding-inline: 0;
+
+            .article-description {
+                display: block;
+                margin-block-start: .5rem;
+            }
+        }
+
+        .read-btn {
+            margin-block-start: 1rem;
+        }
     }
 
 }
