--- a/src/pages/unsocial.astro
+++ b/src/pages/unsocial.astro
@@ -1,47 +1,3 @@
 ---
-import BlogLayout from "@layouts/BlogLayout.astro";
-import FullScreenLayout from "@layouts/FullScreenLayout.astro";
-import { getCollection } from "astro:content";
-import PostTypeSwitch from "@components/unsocial/PostTypeSwitch.astro";
-import dayjs from "dayjs";
-
-const posts = await getCollection("unsocial");
-const ordered = posts.sort((a, b) => {
-  const dateA = dayjs(a.toString()).unix();
-  const dateB = dayjs(b.toString()).unix();
-  return dateB - dateA;
-});
-const content = await Promise.all(
-  ordered.map(async (post) => {
-    const { Content } = await post.render();
-    return Content;
-  })
-);
-
-const pageTitle = "Unsocial";
+return Astro.rewrite("/unsocial/1");
 ---
-
-<FullScreenLayout title={pageTitle}>
-  <BlogLayout className="unsocial-feed photo comment article link">
-    <h1>{pageTitle}</h1>
-    {
-      posts.map((post, index) => {
-        const Content = content[index];
-        return (
-          <PostTypeSwitch post={post} isPreview={true}>
-            <Content />
-          </PostTypeSwitch>
-        );
-      })
-    }
-  </BlogLayout>
-</FullScreenLayout>
-
-<style>
-  .blog-layout.photo,
-  .blog-layout.comment,
-  .blog-layout.article,
-  .blog-layout.link {
-    row-gap: 3rem;
-  }
-</style>
