--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@ h1,
 h2,
 h3,
 h4 {
-    text-wrap: balance;
+    text-wrap: pretty;
 }
 
 /* A elements that don't have a class get default styles */
@@ -145,6 +145,31 @@ h4,
 h5,
 h6 {
     font-family: inherit;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.75rem;
+    font-weight: 700;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
+h5 {
+    font-size: 1.25rem;
+}
+
+h6 {
+    font-size: 1rem;
 }
 
 p,
