--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import VisibleGrid from "./VisibleGrid.astro";
+import SearchModal from "./modal/SearchModal.astro";
 ---
 
 <ul class="nav-list">
@@ -30,6 +31,7 @@ import VisibleGrid from "./VisibleGrid.astro";
   </li>
   <li><a href="/blog/">Blog</a></li>
   <li><a href="/unsocial/">Unsocial</a></li>
+  <li class="leading-9"><SearchModal /></li>
 </ul>
 
 <button class="main-nav-btn">
@@ -116,6 +118,10 @@ import VisibleGrid from "./VisibleGrid.astro";
   .hide {
     display: none;
   }
+
+  /* .open-search {
+    padding: 1rem;
+  } */
   @media screen and (max-width: 700px) {
     .main-nav-btn {
       display: block;
