--- a/src/pages/about/projects/bg-data-tools.astro
+++ b/src/pages/about/projects/bg-data-tools.astro
@@ -18,7 +18,7 @@ import { Icon } from "astro-icon/components";
         >
         <a
           class="text-2xl"
-          href="https://www.github.com/zapbampow"
+          href="https://github.com/zapbampow/bg-data-tools"
           target="_blank"
           rel="noopener noreferrer"
           ><Icon name="tabler:brand-github-filled" /></a
