removes the unsocial tab from navigation

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -30,7 +30,7 @@ import SearchModal from "./modal/SearchModal.astro";
     </div>
   </li>
   <li><a href="/blog/">Blog</a></li>
-  <li><a href="/unsocial/">Unsocial</a></li>
+  <!-- <li><a href="/unsocial/">Unsocial</a></li> -->
   <li class="leading-9"><SearchModal /></li>
 </ul>
 
