style(History): updates the bottom margin of the history section so that it can reach the highlight point for the sidebar highlighting

--- a/src/components/about/History.astro
+++ b/src/components/about/History.astro
@@ -43,14 +43,14 @@ import Project from "./Project.astro";
   <div id="projects" class="history-section">
     <h2>Projects</h2>
     <ul class="projects">
-      {projects.map(project => <Project project={project} />)}
+      {projects.map((project) => <Project project={project} />)}
     </ul>
   </div>
 </section>
 
 <style>
   .history {
-    padding-block-end: 20rem;
+    padding-block-end: 50vh;
     display: grid;
     gap: 5rem;
   }
@@ -66,7 +66,8 @@ import Project from "./Project.astro";
     }
   }
 
-  .roles, .projects {
+  .roles,
+  .projects {
     display: grid;
     gap: 3rem;
   }
