--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,9 @@ const yearsOfExperience = dayjs().diff(dayjs("2018-01-01"), "year");
         software.
       </p>
       <p>
-        [Insert over-the-top self-promotional, AI generated copy here. Mention
+        [Insert over-the-top self-promotional, AI-generated copy here. Mention
         stuff like passion, enthusiasm, and relentless pursuit of excellence.]
+        🤣
       </p>
     </div>
   </div>
